Updated submission date

--- a/task5d_krishna.ipynb
+++ b/task5d_krishna.ipynb
@@ -11,7 +11,7 @@
     "|---|---|\n",
     "| Name | Bandi Krishna Chaitanya |\n",
     "| Deakin ID | s225170881 |\n",
-    "| Submission Date | |"
+    "| Submission Date | 2 August 2025 |"
    ]
   },
   {
